@@ -450,6 +450,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -2658,40 +2668,17 @@ name|url
 argument_list|)
 return|;
 block|}
-DECL|method|doSendDoc
+DECL|method|sendDoc
 specifier|protected
 name|void
-name|doSendDoc
+name|sendDoc
 parameter_list|(
 name|int
-name|docid
+name|docId
 parameter_list|)
 throws|throws
 name|Exception
 block|{
-name|UpdateRequest
-name|up
-init|=
-operator|new
-name|UpdateRequest
-argument_list|()
-decl_stmt|;
-name|up
-operator|.
-name|setParam
-argument_list|(
-name|UpdateRequest
-operator|.
-name|MIN_REPFACT
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-literal|2
-argument_list|)
-argument_list|)
-expr_stmt|;
 name|SolrInputDocument
 name|doc
 init|=
@@ -2709,7 +2696,7 @@ name|String
 operator|.
 name|valueOf
 argument_list|(
-name|docid
+name|docId
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2721,121 +2708,25 @@ literal|"a_t"
 argument_list|,
 literal|"hello"
 operator|+
-name|docid
+name|docId
 argument_list|)
 expr_stmt|;
-name|up
+name|sendDocsWithRetry
+argument_list|(
+name|Collections
 operator|.
-name|add
+name|singletonList
 argument_list|(
 name|doc
 argument_list|)
-expr_stmt|;
-name|int
-name|minAchievedRf
-init|=
-name|cloudClient
-operator|.
-name|getMinAchievedReplicationFactor
-argument_list|(
-name|cloudClient
-operator|.
-name|getDefaultCollection
-argument_list|()
 argument_list|,
-name|cloudClient
-operator|.
-name|request
-argument_list|(
-name|up
-argument_list|)
-argument_list|)
-decl_stmt|;
-block|}
-DECL|method|sendDoc
-specifier|protected
-name|void
-name|sendDoc
-parameter_list|(
-name|int
-name|docId
-parameter_list|)
-throws|throws
-name|Exception
-block|{
-try|try
-block|{
-name|doSendDoc
-argument_list|(
-name|docId
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|SolrServerException
-name|e
-parameter_list|)
-block|{
-if|if
-condition|(
-name|e
-operator|.
-name|getRootCause
-argument_list|()
-operator|instanceof
-name|NoHttpResponseException
-condition|)
-block|{
-comment|// we don't know if the doc was accepted or not, we send again
-name|Thread
-operator|.
-name|sleep
-argument_list|(
+literal|2
+argument_list|,
+literal|3
+argument_list|,
 literal|100
 argument_list|)
 expr_stmt|;
-try|try
-block|{
-name|doSendDoc
-argument_list|(
-name|docId
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|SolrServerException
-name|e2
-parameter_list|)
-block|{
-if|if
-condition|(
-name|e2
-operator|.
-name|getRootCause
-argument_list|()
-operator|instanceof
-name|NoHttpResponseException
-condition|)
-block|{
-comment|// we don't know if the doc was accepted or not, we send again
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|3000
-argument_list|)
-expr_stmt|;
-name|doSendDoc
-argument_list|(
-name|docId
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-block|}
 block|}
 comment|/**    * Query the real-time get handler for a specific doc by ID to verify it    * exists in the provided server, using distrib=false so it doesn't route to another replica.    */
 annotation|@
