@@ -196,6 +196,20 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|SolrInputDocument
 import|;
 end_import
@@ -1475,54 +1489,18 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-name|UpdateRequest
-name|up
-init|=
-operator|new
-name|UpdateRequest
-argument_list|()
-decl_stmt|;
-name|up
-operator|.
-name|setParam
-argument_list|(
-name|UpdateRequest
-operator|.
-name|MIN_REPFACT
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|minRf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|up
-operator|.
-name|add
-argument_list|(
-name|batch
-argument_list|)
-expr_stmt|;
 name|int
 name|batchRf
 init|=
-name|cloudClient
-operator|.
-name|getMinAchievedReplicationFactor
+name|sendDocsWithRetry
 argument_list|(
-name|cloudClient
-operator|.
-name|getDefaultCollection
-argument_list|()
+name|batch
 argument_list|,
-name|cloudClient
-operator|.
-name|request
-argument_list|(
-name|up
-argument_list|)
+name|minRf
+argument_list|,
+literal|5
+argument_list|,
+literal|1
 argument_list|)
 decl_stmt|;
 name|assertRf
@@ -1615,52 +1593,17 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-name|up
-operator|=
-operator|new
-name|UpdateRequest
-argument_list|()
-expr_stmt|;
-name|up
-operator|.
-name|setParam
-argument_list|(
-name|UpdateRequest
-operator|.
-name|MIN_REPFACT
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|minRf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|up
-operator|.
-name|add
-argument_list|(
-name|batch
-argument_list|)
-expr_stmt|;
 name|batchRf
 operator|=
-name|cloudClient
-operator|.
-name|getMinAchievedReplicationFactor
+name|sendDocsWithRetry
 argument_list|(
-name|cloudClient
-operator|.
-name|getDefaultCollection
-argument_list|()
+name|batch
 argument_list|,
-name|cloudClient
-operator|.
-name|request
-argument_list|(
-name|up
-argument_list|)
+name|minRf
+argument_list|,
+literal|5
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 name|assertRf
@@ -1752,52 +1695,17 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-name|up
-operator|=
-operator|new
-name|UpdateRequest
-argument_list|()
-expr_stmt|;
-name|up
-operator|.
-name|setParam
-argument_list|(
-name|UpdateRequest
-operator|.
-name|MIN_REPFACT
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|minRf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|up
-operator|.
-name|add
-argument_list|(
-name|batch
-argument_list|)
-expr_stmt|;
 name|batchRf
 operator|=
-name|cloudClient
-operator|.
-name|getMinAchievedReplicationFactor
+name|sendDocsWithRetry
 argument_list|(
-name|cloudClient
-operator|.
-name|getDefaultCollection
-argument_list|()
+name|batch
 argument_list|,
-name|cloudClient
-operator|.
-name|request
-argument_list|(
-name|up
-argument_list|)
+name|minRf
+argument_list|,
+literal|5
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 name|assertRf
