@@ -4923,6 +4923,171 @@ expr_stmt|;
 block|}
 block|}
 annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"rawtypes"
+argument_list|)
+DECL|method|sendDocsWithRetry
+specifier|protected
+name|int
+name|sendDocsWithRetry
+parameter_list|(
+name|List
+argument_list|<
+name|SolrInputDocument
+argument_list|>
+name|batch
+parameter_list|,
+name|int
+name|minRf
+parameter_list|,
+name|int
+name|maxRetries
+parameter_list|,
+name|int
+name|waitBeforeRetry
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|UpdateRequest
+name|up
+init|=
+operator|new
+name|UpdateRequest
+argument_list|()
+decl_stmt|;
+name|up
+operator|.
+name|setParam
+argument_list|(
+name|UpdateRequest
+operator|.
+name|MIN_REPFACT
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|minRf
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|up
+operator|.
+name|add
+argument_list|(
+name|batch
+argument_list|)
+expr_stmt|;
+name|NamedList
+name|resp
+init|=
+literal|null
+decl_stmt|;
+name|int
+name|numRetries
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+try|try
+block|{
+name|resp
+operator|=
+name|cloudClient
+operator|.
+name|request
+argument_list|(
+name|up
+argument_list|)
+expr_stmt|;
+return|return
+name|cloudClient
+operator|.
+name|getMinAchievedReplicationFactor
+argument_list|(
+name|cloudClient
+operator|.
+name|getDefaultCollection
+argument_list|()
+argument_list|,
+name|resp
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|exc
+parameter_list|)
+block|{
+name|Throwable
+name|rootCause
+init|=
+name|SolrException
+operator|.
+name|getRootCause
+argument_list|(
+name|exc
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|++
+name|numRetries
+operator|<=
+name|maxRetries
+condition|)
+block|{
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"ERROR: "
+operator|+
+name|rootCause
+operator|+
+literal|" ... Sleeping for "
+operator|+
+name|waitBeforeRetry
+operator|+
+literal|" seconds before re-try ..."
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|waitBeforeRetry
+operator|*
+literal|1000L
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"No more retries available! Add batch failed due to: "
+operator|+
+name|rootCause
+argument_list|)
+expr_stmt|;
+throw|throw
+name|exc
+throw|;
+block|}
+block|}
+block|}
+block|}
+annotation|@
 name|Override
 DECL|method|indexDoc
 specifier|protected
